--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
 /* your code */
+ table {
+            width: 80%;
+            border-collapse: collapse;
+            background-color: #ffffff;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            overflow: hidden;
+        }
+thead{
+	background-color : #466472;
+	color : white;
+}
+th, td{
+	border : 1px solid black
+	text-align: center;
+	padding: 8px
+}
+tbody tr:nth-child(even){
+	background-color:#CCDAE0
+}
